<resources>
    <string name="app_name">Inventary</string>

    <!--StringSplash-->
    <string name="title">WELCOME TO YOUR INVENTORY</string>

    <!--StringLogin-->
    <string name="name">NAME</string>
    <string name="password">PASSWORD</string>
    <string name="enter">LOGIN</string>
    <!--StringsValidationLogin-->
    <string name="loginError">ERROR</string>
    <string name="msgError">Please Write Your Credentials</string>

    <!--Fragmento Menú. Strings-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleInventario">Menu</string>
    <string name="textProducts">Products</string>
    <string name="textSuppliers">Suppliers</string>
    <string name="textUser">Users</string>
    <string name="textExit">Exit</string>

    <!--Strings para items-->
    <string name="btnBackMenu">Back</string>
    <string name="textSubTitleProduct">Stock</string>
    <string name="textSubTitleUser">User</string>
    <string name="textSubTitleSupplier">Supplier</string>
    <string name="btnReOrden">Reorder Item</string>
    <string name="btnCancel">Cancel</string>


    <string name="btnProductDetail">More</string>

    <string name="hideUserName">Enter Email</string>
    <string name="hideUserPassword">Enter Password</string>
    <string name="txtname">Email</string>
    <string name="txtpassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>



    <!--Strings para los bsd de nuevos-->
    <string name="titleNewProduct">New Product</string>
    <string name="product_id">Product #</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_unit">Product Unit</string>
    <string name="product_image">Product Image</string>
    <string name="btn_new">Add </string>

    <string name="titleNewUser">New User</string>
    <string name="user_id">User #</string>
    <string name="user_name">User Name</string>
    <string name="user_phone">User Phone</string>
    <string name="user_email">User Email</string>
    <string name="user_password">User Password</string>
    <string name="user_image">User Image</string>

    <string name="titleNewSupplier">New Supplier</string>
    <string name="supplier_id">Supplier #</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_image">Supplier Image</string>





</resources>