<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/titleNewProduct"
        android:textColor="@color/black"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/red" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/product_id"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/product_id"
        android:minHeight="36dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/product_name"
        android:minHeight="36dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/product_price"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/product_price"
        android:minHeight="36dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/product_quantity"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/product_quantity"
        android:minHeight="36dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:text="@string/product_unit"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_product_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/product_unit"
        android:minHeight="36dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:text="@string/product_image"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/product_image"
        android:minHeight="36dp"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/bsd_product_submit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btn_new"
        />

</androidx.appcompat.widget.LinearLayoutCompat>