<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/titleNewSupplier"
        android:textColor="@color/black"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/red" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/supplier_id"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_supplier_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/supplier_id"
        android:minHeight="48dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/supplier_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/supplier_name"
        android:minHeight="48dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/supplier_phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/supplier_phone"
        android:minHeight="48dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/supplier_email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_supplier_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/supplier_email"
        android:minHeight="48dp"
        android:textColor="@color/black" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:text="@string/supplier_image"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/bsd_supplier_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/supplier_image"
        android:minHeight="48dp"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/bsd_supplier_submit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btn_new"
        />

</androidx.appcompat.widget.LinearLayoutCompat>