<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondoinicio"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/titleInventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleInventario"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        />

    <ImageView
        android:id="@+id/imgProduct"
        style="@style/imgProducts"
        android:layout_marginTop="80dp"
        android:src="@drawable/product"
        app:layout_constraintTop_toBottomOf="@id/titleInventario"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        />
    <TextView
        android:id="@+id/Product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textProducts"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgProduct"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="65dp"
        />

    <ImageView
        android:id="@+id/imgSuppliers"
        style="@style/imgSuppliers"
        android:src="@drawable/suppliers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInventario"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        />
    <TextView
        android:id="@+id/Supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSuppliers"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgSuppliers"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="65dp"
        />

    <ImageView
        android:id="@+id/imgUsers"
        style="@style/imgUsers"
        android:src="@drawable/userimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProduct"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        />
    <TextView
        android:id="@+id/Users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textUser"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgUsers"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        />
    <ImageView
        android:id="@+id/imgExit"
        style="@style/imgUsers"
        android:src="@drawable/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgSuppliers"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        />
    <TextView
        android:id="@+id/Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textExit"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgExit"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="100dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>